# pi-project-workflows

./: .gitignore  .pi-context-registry.json  .pi-context.json  CHANGELOG.md  CLAUDE.md  README.md  biome.json  hello.txt  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: mandates.jsonl  settings.json
.context/: config.json  conventions.json  decisions.json  features.json  framework-gaps.json  issues.json  layer-plans.json  migrations.json  milestone.json  phase.json  rationale.json  relations.json  research.json  session-notes.json  story.json  tasks.json  verification.json
.context-archived-2026-06-30/: config.json  issues.json  migrations.json  phase.json  relations.json  research.json  tasks.json
.context-jit-spec-v2/: authority-docs.json  axioms.json  concepts.json  config.json  context-contracts.json  decisions.json  dispatch-modes.json  features.json  framework-gaps.json  friction-items.json  migrations.json  relations.json  research.json  tasks.json  v1-supersessions.json  work-orders.json
.husky/: post-commit  pre-commit
.project/: adrs.json  architecture.json  config.json  conformance-reference.json  conventions.json  decisions.json  domain.json  feature-story.json  features.json  fix-audit-results.json  fix-audit-verify.json  framework-gaps.json  gaps.json  inventory.json  issues.json  layer-plans.json  migrations.json  model-config.json  phase.json  plan-layer.json  plan-phase.json  project.json  rationale.json  reference-contracts.json  relations.json  requirements.json  research.json  runtime-spec.json  spec-reviews.json  state.json  story-task.json  tasks.json  verification.json
.project-archived/: conformance-reference.json  conventions.json  features.json  framework-gaps.json  migrations.json  phase.json  project.json  spec-reviews.json
.project-migrate/: config.json  conventions.json  framework-gaps.json  layer-plans.json  rationale.json  relations.json  tasks.json  verification.json
.workflow/: architecture.json  conformance-reference.json  conventions.json  decisions.json  fix-audit-results.json  fix-audit-verify.json  gaps.json  inventory.json  model-config.json  rationale.json  reference-contracts.json  runtime-spec.json  state.json  validate.sh
analysis/: 2026-04-13-spec-loop-derivability.md  2026-04-15-blocks-as-prompt-substrate.md  2026-04-15-expression-language-comparison.md  2026-04-15-process-articulation.md  2026-04-15-runtime-step-context.md  2026-04-25-pi-bypass-arc-fragilities.md  2026-04-27-canonical-loader-replaces-seedExamples.md  2026-04-27-curation-recursion-termination-and-withering.md  2026-04-27-decomposition-methods-and-audit-as-scope-driver.md  2026-05-01-ceremony-ideas.md  (+320 more)
analysis/wasc-operation-system-port-source/process-running/gate-harness/: Makefile  conftest.py  package.json  pyproject.toml
analysis/wasc-operation-system-port-source/process-running/gate-harness/.github/: dependabot.yml
analysis/wasc-operation-system-port-source/process-running/gate-harness/.github/workflows/: test.yml
(+893 files in other folders)
